--- a/Project/index.html
+++ b/Project/index.html
@@ -13,8 +13,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link rel="stylesheet" href="./css/normolize.css">
+    <link rel="stylesheet" href="./css/styleSass.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
+
     <title>AKAD.</title>
 </head>
 
